@@ -1,3 +1,7 @@
+2005-04-09 crschmidt
+
+	* lib/SVG/Metadata.pm:  Fixing tabs, improving RDF generation.
+
 2005-02-07 23:00  bryce
 
 	* lib/SVG/Metadata.pm:  Corrected a few bugs in the printing of
